fix: make the command output visible

--- a/themes/ovh/static/css/main.css
+++ b/themes/ovh/static/css/main.css
@@ -54,7 +54,7 @@
   color: #00A000; }
 
 .go {
-  color: #303030; }
+  color: #e8d8b9; }
 
 .gp {
   color: #C65D09;
